@@ -70,13 +70,12 @@ $output.="<table cellspacing='0' style='width: 100%'>" ;
 				$output.="<table cellspacing='0' style='border: none; width: 100%'>" ;
 					$output.="<tr>" ;
 						$output.="<td>" ;
-							$output.="<b>" . _("Insert Images As Links?") . "*</b><br/>" ;
-							$output.="<span style=\"font-size: 90%\"><i>" . _('If not, they will be inserted as images.') . "</i></span>" ;
+							$output.="<b>" . _("Insert Images As") . "*</b><br/>" ;
 						$output.="</td>" ;
 						$output.="<td class=\"right\">" ;
 							$output.="<select name=\"imagesAsLinks\" id=\"imagesAsLinks\" style=\"width: 302px\">" ;
-								$output.="<option value='Y'>" . ynExpander('Y') . "</option>" ;
-								$output.="<option value='N'>" . ynExpander('N') . "</option>" ;			
+								$output.="<option value='N'>" . _('Image') . "</option>" ;		
+								$output.="<option value='Y'>" . _('Link') . "</option>" ;	
 							$output.="</select>" ;
 						$output.="</td>" ;
 					$output.="</tr>" ;
